syntax = "proto3";

option java_package = "proto";
option java_generic_services = true;

message Empty {}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    string picture = 4;
    int32 price = 5;

    int32 availableItems = 6;
    int32 reservedItems = 7;

    repeated string tags = 8;
}

message ClientInfo {
    string address = 1;
    string paymentClientID = 2;
}

message ListProductsResponse {
    repeated Product products = 1;
}

message GetProductRequest {
    string id = 1;
}

message SearchProductsRequest {
    string query = 1;
}

message SearchProductsResponse {
    repeated Product results = 1;
}

message GetProductResponse {
    Product product = 1;
}

message BuyProductRequest {
    string id = 1;
    ClientInfo clientInfo = 2;
}

message BuyProductResponse {
    bool status = 1;
}

service ProductCatalogService {
    rpc ListProducts(Empty) returns (ListProductsResponse) {}
    rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
    rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse) {}
    rpc BuyProduct(BuyProductRequest) returns (BuyProductResponse) {}
}